MCA-1167 implementing the route "get racing series node by id"
