# specification/OpenAPI/more-cars.openapi.json
@@ -3970,6 +3970,47 @@
         }
       }
     },
+    "/racing-series/{racing-series-id}": {
+      "get": {
+        "tags": [
+          "Racing Series"
+        ],
+        "summary": "Get `Racing Series` by ID",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "racing-series-id",
+            "description": "ID of the `Racing Series`",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "`Racing Series` successfully loaded.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RacingSeriesResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Request failed. A `Racing Series` with the provided ID could not be found.",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/racing-events": {
       "get": {
         "tags": [
@@ -6062,6 +6103,17 @@
         "properties": {
           "data": {
             "$ref": "#/components/schemas/RacingEvent"
+          }
+        }
+      },
+      "RacingEventCollectionResponse": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RacingEventResponse"
+            }
           }
         }
       },
