# src/routes/racing-series.ts
@@ -4,5 +4,6 @@ import {RacingSeriesController} from "../controllers/RacingSeriesController"
 const router = express.Router()
 
 router.post('/racing-series', RacingSeriesController.create)
+router.get('/racing-series/:id', RacingSeriesController.getById)
 
 export default router
